--- a/feedback/index.html
+++ b/feedback/index.html
@@ -2,25 +2,26 @@
 
 <head>
 	<link rel="stylesheet" href="./index.css">
+	<script src="./index.js"></script>
 </head>
 
 <body>
 	<div class="container">
-		<div class="smiley happy">
+		<div class="smiley happy" onclick="sendFeedback('HAPPY')">
 			<div class="eyes">
 				<div class="eye"></div>
 				<div class="eye"></div>
 			</div>
 			<div class="expression_happy"></div>
 		</div>
-		<div class="smiley okok">
+		<div class="smiley okok" onclick="sendFeedback('OKOK')">
 			<div class="eyes">
 				<div class="eye"></div>
 				<div class="eye"></div>
 			</div>
 			<div class="expression_okok"></div>
 		</div>
-		<div class="smiley sad">
+		<div class="smiley sad" onclick="sendFeedback('SAD')">
 			<div class="eyes">
 				<div class="eye"></div>
 				<div class="eye"></div>
